# sphinx-quant

./: .gitignore  CLEANUP_SUMMARY.md  QUICKSTART.md  README.NEW.md  README.md  REFACTORING_SUMMARY.md  docker-compose.new.yml  pyproject.toml  uv.toml
backend/: Dockerfile  README.md  README_SQL.md  create_admin.py  init_db.sql  requirements.txt
backend/app/: celery.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  backtests.py  strategies.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  backtest.py  base.py  source_code.py  strategy.py  user.py
backend/app/schemas/: __init__.py  backtest.py  source_code.py  strategy.py  token.py  user.py
backend/app/utils/: const.py
docs/guide/uv/: README.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  backtest.ts  index.ts  strategy.ts  user.ts
frontend/src/layouts/: BasicLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/types/: auth.ts  backtest.ts  sourceCode.ts  strategy.ts  user.ts
frontend/src/views/: Dashboard.vue  Login.vue
frontend/src/views/Backtests/: Detail.vue  index.vue
frontend/src/views/Strategies/: Detail.vue  Form.vue  index.vue
